# pursuit

./: .gitignore  .travis.yml  CHANGELOG.md  Gruntfile.js  LICENSE  README.md  RELEASE.md  Settings.hs  bower.json  cabal.config  cabal.project  data.json  index.html  libraries.json  package.json  pursuit.cabal  stack.yaml  travis-script.sh
.github/workflows/: ci.yml
app/: devel.hs
client/: .gitignore  Gruntfile.js  bower.json  data.json  index.html  package.json
client/css/: style.css
client/src/: Main.purs
client/src/Control/Monad/Eff/: History.purs
client/src/Data/: Trie.purs
config/: development.env  keter.yml  models  nginx.dev.conf  robots.txt  routes  settings.yml  test-settings.yml
deploy/: SERVER.md  anubis.botPolicies.yaml  backup.sh  cache-eviction.sh  nginx.conf  pursuit.service  remote.sh  run.sh
generator/: LICENSE  pursuit-gen.cabal
generator/src/: Libraries.hs  Main.hs
js/: index.js
license-generator/: generate  gnu-lgpl-2.1.txt  header.txt
notes/: architecture.md
prim/: Prim.purs
sample-data/: either-999.0.0.json  integers-999.0.0.json  integers-999.1.0.json  integers-999.2.0.json  integers-999.3.0.json  prelude-999.0.0.json  prelude-999.0.1.json  prelude-999.0.2.json  quickcheck-999.0.0.json  submit-all
server/: .gitignore  Main.hs  libraries.json  pursuit.cabal
server/Data/: Trie.hs
server/PursuitServer/: HtmlTemplates.hs  Server.hs  Types.hs
server/generator/: Main.hs
server/server/: Main.hs
server/src/: Pursuit.hs
src/: Application.hs  Css.hs  EmbeddedDocs.hs  Foundation.hs  GithubAPI.hs  Main.purs  Model.hs  Pursuit.hs  SearchIndex.hs  SearchUtils.hs  Settings.hs  TemplateHelpers.hs  Templates.hs  TimeUtils.hs  Utils.hs  XMLArrows.hs
src/Cheapskate/: SmartQuotes.hs
src/Control/: AJAX.purs
src/Control/Monad/Eff/: AJAX.purs  DOM.purs
src/Data/: Index.purs  Trie.purs
src/Handler/: Caching.hs  Common.hs  Database.hs  GithubOAuth.hs  Guides.hs  Help.hs  Home.hs  Hoogle.hs  PackageBadges.hs  Packages.hs  Search.hs  Utils.hs  Verification.hs
src/Import/: NoFoundation.hs
src/Model/: Database.hs  DocLinks.hs  DocsAsHoogle.hs  DocsAsHtml.hs
src/Pursuit/: Data.hs  Database.hs  Docs.hs  Generator.hs  Prim.hs
src/Settings/: EmbedPursuitCss.hs
src/YesodExtras/: Lucid.hs
static/: opensearchdescription.xml
static/css/: extra.css  pursuit.css  pursuit.less  style.css
static/favicon/: Readme.md  browserconfig.xml  manifest.json
static/help-docs/: authors.md  index.md  users.md
static/js/: Markup.js  Pursuit.js  js.cookie.js
templates/: analytics.julius  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.julius  default-layout.lucius  help.hamlet  homepage.hamlet  package.hamlet  packageBanner.hamlet  packageNotFound.hamlet  packageVersion.hamlet  packageVersionDocs.hamlet  packageVersionModuleDocs.hamlet  packageVersionNotFound.hamlet  pagination.hamlet  search.hamlet  search.julius  search.lucius  uploadPackage.hamlet  uploadPackage.julius  verify.hamlet  versionSelector.hamlet  versionSelector.julius
templates/guides/: packageUpload.hamlet
test/: Main.hs  SearchSpec.hs  TestImport.hs  TestMain.hs  libraries-minimal.json
test/Handler/: CommonSpec.hs  HomeSpec.hs
travis/: script.sh  timeout.sh
