name:              pursuit
version:           0.4.7
cabal-version:     >= 1.8
build-type:        Simple
license:           MIT
license-file:      LICENSE
extra-source-files:
  CHANGELOG.md

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src, app
    exposed-modules: Application
                     Css
                     Foundation
                     GithubAPI
                     Handler.Caching
                     Handler.Common
                     Handler.Database
                     Handler.GithubOAuth
                     Handler.Help
                     Handler.PackageBadges
                     Handler.Packages
                     Handler.Search
                     Handler.Utils
                     Import
                     Import.NoFoundation
                     Model.DocLinks
                     Model.DocsAsHtml
                     Settings
                     TemplateHelpers
                     TimeUtils

    other-modules:   Paths_pursuit

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                DeriveGeneric
                ViewPatterns
                TupleSections
                RecordWildCards
                ScopedTypeVariables
                StandaloneDeriving

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , bytestring-trie               >= 0.2.4      && < 0.2.5
                 , text                          >= 0.11       && < 2.0
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.2        && < 0.3
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , deepseq                       >= 1.4        && < 1.5
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 4
                 , data-default
                 , aeson                         >= 0.11       && < 0.12
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , parallel
                 , parsec
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , purescript >= 0.9.1
                 , bower-json >= 0.4
                 , lucid
                 , blaze-builder
                 , blaze-markup
                 , blaze-html
                 , blaze-svg
                 , filepath
                 , dlist
                 , cheapskate
                 , split
                 , mtl
                 , shakespeare
                 , colour
                 , hxt
                 , crypto-random
                 , base64-bytestring
                 , http-types
                 , case-insensitive
                 , conduit-extra
                 , aeson-better-errors
                 , exceptions
                 , transformers
                 , cookie
                 , xss-sanitize
                 , wai-middleware-gunzip
                 , barrier ==0.1.*

    if flag(dev)
      build-depends: foreign-store

executable         pursuit
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, pursuit

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

-- test-suite test
--     type:              exitcode-stdio-1.0
--     main-is:           Spec.hs
--     hs-source-dirs:    test
--     ghc-options:       -Wall
--
--     extensions: TemplateHaskell
--                 QuasiQuotes
--                 OverloadedStrings
--                 NoImplicitPrelude
--                 CPP
--                 MultiParamTypeClasses
--                 TypeFamilies
--                 GADTs
--                 GeneralizedNewtypeDeriving
--                 FlexibleContexts
--                 EmptyDataDecls
--                 NoMonomorphismRestriction
--                 DeriveDataTypeable
--                 ViewPatterns
--                 TupleSections
--
--     build-depends: base
--                  , pursuit
--                  , yesod-test >= 1.4.3 && < 1.5
--                  , yesod-core
--                  , yesod
--                  , hspec >= 2.0.0
--                  , classy-prelude
--                  , classy-prelude-yesod
