name:              pursuit
version:           0.9.8
cabal-version:     >= 1.8
build-type:        Simple
license:           MIT
license-file:      LICENSE
extra-source-files:
  CHANGELOG.md

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src, app
    exposed-modules: Application
                     Cheapskate.SmartQuotes
                     EmbeddedDocs
                     Foundation
                     GithubAPI
                     Handler.Caching
                     Handler.Common
                     Handler.Database
                     Handler.Help
                     Handler.PackageBadges
                     Handler.Packages
                     Handler.Search
                     Handler.Utils
                     Import
                     Import.NoFoundation
                     SearchIndex
                     Settings
                     Settings.EmbedPursuitCss
                     TemplateHelpers
                     TimeUtils
                     XMLArrows

    other-modules:   Paths_pursuit

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                DeriveGeneric
                ViewPatterns
                TupleSections
                RecordWildCards
                ScopedTypeVariables
                StandaloneDeriving
                LambdaCase

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.6        && < 1.7
                 , yesod-core                    >= 1.6        && < 1.7
                 , yesod-static                  >= 1.6        && < 1.7
                 , yesod-form                    >= 1.6        && < 1.7
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.11.3.1
                 , bytestring-trie
                 , text
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , deepseq
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , parallel
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , purescript ==0.15.10
                 , bower-json
                 , blaze-builder
                 , blaze-markup
                 , blaze-html
                 , blaze-svg
                 , filepath
                 , dlist
                 , cheapskate
                 , split
                 , mtl
                 , shakespeare
                 , colour
                 , hxt
                 , base64-bytestring
                 , http-types
                 , case-insensitive
                 , conduit-extra
                 , aeson-better-errors
                 , exceptions
                 , transformers
                 , cookie
                 , xss-sanitize
                 , barrier
                 , mono-traversable
                 , streaming-commons
    if flag(dev)
      build-depends: foreign-store

executable         pursuit
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, pursuit

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N -Wunused-packages

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    other-modules:     SearchSpec
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , pursuit
                 , yesod-test >= 1.6 && < 1.7
                 , yesod-core
                 , yesod
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , QuickCheck
