name: pursuit
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Phil Freeman 2014
maintainer: paf31@cantab.net
synopsis: Library and tools for the pursuit search engine
category: Tools
author: Phil Freeman
data-dir: ""

library 
    build-depends: base ==4.7.*,
                   purescript >=0.6.2,
                   aeson -any,
                   text -any, 
                   containers -any
    exposed-modules: Pursuit
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall -O2

executable pursuit-gen
    build-depends: base ==4.7.*, 
                   pursuit -any,
                   directory >=1.2.0.1 && <1.3,
                   filepath >=1.3.0.1 && <1.4,
                   purescript >=0.6.2,
                   aeson -any, 
                   cmdtheline -any, 
                   text -any, 
                   bytestring -any,
                   split -any, 
                   process -any, 
                   Glob -any, 
                   containers -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: generator
    ghc-options: -Wall -O2

executable pursuit-server
    build-depends: base ==4.7.*, 
                   pursuit -any,
                   purescript >=0.6.2,
                   aeson -any, 
                   cmdtheline -any, 
                   text -any,
                   scotty -any,
                   utf8-string -any,
                   containers -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: server
    ghc-options: -Wall -O2

